--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram - Perfil de Viagens</title>
     <link rel="stylesheet" href="./styles/index.css">
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <a href="#" id="logo">
+            <img src="assets/Logo.svg" alt="Logo marca">
+        </a>
+        <ul id="primary-menu">
+            <li>
+                <a href="#">
+                    <img src="assets/icons/MagnifyingGlass.svg" alt="Icone de lupa">
+                </a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas Viagens</a></li>
+            <li><a href="#">
+                <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+            </a></li>
+        </ul>
+    </nav>
+    <header>
+    </header>
 </body>
 </html>
