--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <div class="bg-surface-color">
+    <nav class="container">
         <a href="#" id="logo">
             <img src="assets/Logo.svg" alt="Logo marca">
         </a>
@@ -29,6 +30,7 @@
             </a></li>
         </ul>
     </nav>
+    </div>
     <header>
     </header>
 </body>
