add: Style do footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img src="assets/images/Image 11.png" alt="...">
         <img src="assets/images/Image 12.png" alt="...">
     </main>
-    <footer>
+    <footer class="container">
         <span>Travelgram &copy; 2025</span>
         <span>Termos de uso</span>
         <span>Política de privacidade</span>
